--- a/Index.html
+++ b/Index.html
@@ -1,6 +1,9 @@
-Title: BookMarks Test 02
-Date: 2016-03-15
+<!DOCTYPE html>
+<html>
+<body>
+<h1>Hello World</h1>
+<p>I'm hosted with GitHub Pages.</p>
 
 
-
-[Wunderlist - Today](https://www.wunderlist.com/webapp#/lists/today)
+</body>
+</html>
